# Cohen-Chess

./: .gitignore  CMakeLists.txt  Makefile  a.out  cohen_chess  magic_generator  out.txt  random_fancy_magic_generator  test.out
include/cohen/: chess.hpp  util.hpp
res/: Template_Makefile.txt
src/: CMakeLists.txt  ascii_board_test.cpp  cohen_chess.cpp  cohen_chess.h  cohen_chess.hpp  engine.h  flags.h  hash.h  hex_generator.cpp  io.h  istream_test.cpp  magic_evaluator.cpp  magic_gen.cpp  magic_generator.cpp  main.cpp  speed_test.cpp  test.cpp  test_locale.cpp  types.h  util.h
src/cohen/: chess.hpp
src/engine/: attacks.cc  attacks.h  attacks.hpp  board.cc  board.h  board.hpp  board_old.h  game_log.hpp  magic.h  magic.hpp  magic_new.hpp  move_gen.h  move_gen.hpp  move_generation.cc  move_generation.h  state_info.h  state_info_old.h  zobrist.hpp
src/hash/: zobrist.cc  zobrist.h  zobrist.hpp
src/io/: algebraic_notation.cc  algebraic_notation.h  algebraic_notation.hpp  algebraic_notation_new.h  ascii_board.cc  ascii_board.h  ascii_board.hpp  bit_io.h  cecp.cc  cecp.h  cecp.hpp  fen.cc  fen.h  fen.hpp  fen_new.h  fen_new.hpp  parse.hpp  pgn.cc  pgn.h  pgn.hpp  pgn_parser.hpp  uci.cc  uci.h  uci.hpp
src/research/: a.out  ascii_board.h  containers.cpp  io_stream.cpp  magic_generator.cpp  speed_test.cpp  string_view.cpp  string_view.out  template_meta  template_meta.cpp  testing_ascii_board.cpp
src/type/: anti.hpp  bitboard.hpp  (+10 more)
test/: a.out  enum_test.cpp  forward_lambda.cpp  magic_test.cpp  magics_test.cc  parse_test.cpp  random.cpp  stack.cpp
util/: random.py
(+127 files in other folders)
